# Beatrice

./: LICENSE  Outline.md  README.md  beatrice.py  blueprint.md  client.py  debug_log.txt  go.mod  pyproject.toml  server.py  styling.tcss  todo.md
benchmarks/: benchmark_readme.md  cryptolib_benchmark.py
src/: beatrice_server.db  client.py  crypto_utils.py  server.py
src/data_structures/: stack.py
