[project]
name = "beatrice"
version = "0.1.0"
description = "A terminal-based TUI chat app that has absolutely no idea what you're talking about."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "textual>=8.0.2",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
